# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")
config("lume_jpg_api") {
  include_dirs = [ "api" ]
}

config("lume_jpg_config") {
  include_dirs = [ "src" ]
  defines = [
    "CORE_USE_COMPILER_GENERATED_STATIC_LIST=1",
    "CORE_STATIC_PLUGIN_HEADER=${CORE_STATIC_PLUGIN_HEADER}",
  ]
  if (LUME_OHOS_BUILD) {
    defines += [ "__OHOS_PLATFORM__" ]
  }
}

ohos_source_set("lume_jpg_src") {
  configs = [
    ":lume_jpg_config",
    ":lume_jpg_api",
    "${LUME_CORE_PATH}:lume_base_api",
    "${LUME_CORE_PATH}:lume_engine_api",
  ]

  sources = [ "src/jpg/image_loader_jpg.cpp" ]

  external_deps = [
    "c_utils:utils",
    "libjpeg-turbo:turbojpeg",
  ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_static_library("libJpgStatic") {
  deps = [ ":lume_jpg_src" ]
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

config("lume_plugin_jpg_config") {
  defines = [ "CORE_PLUGIN=1" ]
}

ohos_source_set("lume_plugin_jpg_src") {
  sources = [ "src/component_dll.cpp" ]

  configs = [
    ":lume_plugin_jpg_config",
    ":lume_jpg_config",
    ":lume_jpg_api",
    "${LUME_CORE_PATH}:lume_base_api",
    "${LUME_CORE_PATH}:lume_engine_api",
  ]

  external_deps = [ "bounds_checking_function:libsec_shared" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_shared_library(LIB_JPG) {
  deps = [
    ":libJpgStatic",
    ":lume_plugin_jpg_src",
  ]

  relative_install_dir = "graphics3d"
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}
