# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

config("lume_metaobject_config") {
  include_dirs = [
    "3rdparty/",
    "src/",
    "include",
  ]

  defines = [
    "__OHOS_PLATFORM__",
    "CORE3D_PUBLIC=__attribute__((visibility(\"default\")))",
    "CORE_USE_COMPILER_GENERATED_STATIC_LIST=1",
    "CORE3D_SHARED_LIBRARY=1",
    "CORE3D_VALIDATION_ENABLED=0",
    "CORE3D_TESTS_ENABLED=0",
    "CORE3D_DEV_ENABLED=${CORE_DEV_ENABLED}",
    "CORE3D_PUBLIC=__attribute__((visibility(\"default\")))",
    "CORE_USE_COMPILER_GENERATED_STATIC_LIST=1",
    "CORE_STATIC_PLUGIN_HEADER=${CORE_STATIC_PLUGIN_HEADER }"
  ]
  cflags = [
    "-Wall",
    "-Wno-sign-compare",
    "-Wno-unused-variable",
    "-Wno-unused-private-field",
    "-Wno-implicit-fallthrough",
    "-Wno-reorder",
    "-Wno-unused-function",
    "-Wno-tautological-unsigned-zero-compare",
    "-Wno-ignored-qualifiers",
    "-Wno-unused-lambda-capture",
    "-Wno-unused-but-set-variable"
  ]
  cflags_cc = [
    "-Wno-overloaded-virtual",
    "-Wno-missing-braces"
  ]
}

ohos_source_set("lume_metaobject_src") {
  public_configs = [
    ":lume_metaobject_config",
    "${LUME_RENDER_PATH}:lume_render_api",
    "${LUME_CORE_PATH}:lume_base_api",
    "${LUME_CORE_PATH}:lume_engine_api",
    "${LUME_CORE_PATH}:lume_component_help_config",
    "${LUME_CORE_PATH}:lume_default"
  ]

  sources = [
      "src/animation/animation_controller.cpp",
      "src/animation/animation_state.cpp",
      "src/animation/interpolator.cpp",
      "src/animation/keyframe_animation.cpp",
      "src/animation/modifiers/loop.cpp",
      "src/animation/modifiers/reverse.cpp",
      "src/animation/modifiers/speed.cpp",
      "src/animation/parallel_animation.cpp",
      "src/animation/property_animation.cpp",
      "src/animation/sequential_animation.cpp",
      "src/animation/staggered_animation_state.cpp",
      "src/animation/track_animation.cpp",
      "src/animation/track_animation_state.cpp",
      "src/attachment_container.cpp",
      "src/call_context.cpp",
      "src/class_registry.cpp",
      "src/connector.cpp",
      "src/container/container.cpp",
      "src/container/container_base.cpp",
      "src/container/flat_container.cpp",
      "src/container/object_container.cpp",
      "src/container/object_flat_container.cpp",
      "src/container_observer.cpp",
      "src/content_object.cpp",
      "src/curves/bezier_curve.cpp",
      "src/curves/easing_curve.cpp",
      "src/engine/engine_input_property_manager.cpp",
      "src/engine/engine_value.cpp",
      "src/engine/engine_value_manager.cpp",
      "src/functions.cpp",
      "src/future.cpp",
      "src/loaders/class_content_loader.cpp",
      "src/loaders/csv_parser.cpp",
      "src/loaders/csv_string_resource_loader.cpp",
      "src/loaders/json_content_loader.cpp",
      "src/manual_clock.cpp",
      "src/meta_object_lib.cpp",
      "src/model/composite_object_provider.cpp",
      "src/model/container_data_model.cpp",
      "src/model/content_loader_object_provider.cpp",
      "src/model/instantiating_object_provider.cpp",
      "src/model/object_provider_base.cpp",
      "src/number.cpp",
      "src/object_context.cpp",
      "src/object_data_container.cpp",
      "src/object_hierarchy_observer.cpp",
      "src/object_registry.cpp",
      "src/plugin.cpp",
      "src/polling_task_queue.cpp",
      "src/property/bind.cpp",
      "src/property/dependencies.cpp",
      "src/property/property.cpp",
      "src/property/stack_property.cpp",
      "src/proxy_object.cpp",
      "src/random.cpp",
      "src/ref_uri_util.cpp",
      "src/register_anys.cpp",
      "src/register_default_anims.cpp",
      "src/register_default_objs.cpp",
      "src/register_engine_access.cpp",
      "src/register_entities.cpp",
      "src/register_value_serializers.cpp",
      "src/resource/file_resource_manager.cpp",
      "src/resource/object_resource.cpp",
      "src/serialization/backend/debug_output.cpp",
      "src/serialization/backend/json_input.cpp",
      "src/serialization/backend/json_output.cpp",
      "src/serialization/exporter.cpp",
      "src/serialization/importer.cpp",
      "src/serialization/json_exporter.cpp",
      "src/serialization/json_importer.cpp",
      "src/serialization/metav1_compat.cpp",
      "src/startable_object_controller.cpp",
      "src/system_clock.cpp",
      "src/threaded_task_queue.cpp",
  ]
  deps = [
  ]
  external_deps = [
    "c_utils:utils",
  ]
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

config("lume_meta_api_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("AGPMetaApi") {
  public_configs = [
    ":lume_meta_api_config",
  ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_static_library("libMetaObject") {
  public_deps = [
    ":lume_metaobject_src",
  ]
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_shared_library("libPluginMetaObject") {
  public_deps = [
    ":libMetaObject",
  ]
  relative_install_dir = "graphics3d"
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

